--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "https://github.com/ogus/random-queue.git"
   },
-  "author": "Ogus",
+  "author": "ogus",
   "license": "ISC",
   "devDependencies": {
     "terser": "^3.9.2"
