--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "random-queue",
-  "version": "1.0.0",
-  "description": "A queue data structure with randomly accessed elements",
+  "version": "1.1.0",
+  "description": "A Queue data structure with fast element storage and randomized element access",
+  "author": "Ogus",
+  "license": "WTFPL",
+  "main": "random-queue.js",
   "scripts": {
     "build": "terser random-queue.js -c -m reserved=['RandomQueue'] > random-queue.min.js"
   },
+  "devDependencies": {
+    "terser": "^3.9.2"
+  },
+  "keywords": [
+    "random",
+    "queue",
+    "stack",
+    "data-structure"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/ogus/random-queue.git"
   },
-  "author": "ogus",
-  "license": "ISC",
-  "devDependencies": {
-    "terser": "^3.9.2"
-  }
+  "homepage": "https://github.com/ogus/random-queue#readme"
 }
